# clang-tidy-check

./: .gitignore  LICENSE.md  README.md  action.yml
.github/actions/install-build-tools/: action.yml  install_build_tools.sh
.github/workflows/: test-action.yml  test-clang-tidy-check-action.yml
script/: clang_tidy_check.sh  clang_tidy_install.sh
test/good_project/: .clang-tidy  CMakeLists.txt  main.cpp  test.cpp
test/good_project/math_lib/: CMakeLists.txt
test/good_project/math_lib/include/math_lib/: sqr.hpp
test/good_project/math_lib/src/: sqr.cpp
test/good_quality_code/: CMakeLists.txt
test/poor_project/: .clang-format  CMakeLists.txt  main.cpp
test/poor_quality_code/: CMakeLists.txt
